# coobaker

./: CMakeLists.txt
include/: ddscm.h  maptypes.h  radiance.h
source/: ddscm.cpp  main.cpp  maptypes.cpp  radiance.cpp
